[workspace]

members = [
    "p17",
    "p22",
    "p23",
    "p37",
    "p39",
    "p40",
    "p46",
    "p47",
    "p51",
    "p52",
    "p77",
    "p78",
    "p79",
    "p90",
    "p98",
    "p99",
    "p103",
    "p105",
    "p106",
    "p109",
    "p113",
    "p114",
    "p124",
    "p131",
    "p216",
    "p1725",
]
